fixing sidebar author bio spacing

--- a/hugo/assets/sass/components/_sidebar.scss
+++ b/hugo/assets/sass/components/_sidebar.scss
@@ -2,6 +2,10 @@
 
 .sidebar {
   .sidebar_inner {
+.author_bio {
+  line-height: 1.25;
+}
+
     li {
       line-height: 1.35;
 
@@ -11,7 +15,7 @@
         }
       }
     }
-    
+
     &::before {
       display: block;
       content: '';
